<resources>
    <string name="pref_key_dark_mode" translatable="false">dark_mode</string>
    <string name="pref_key_font_size" translatable="false">font_size</string>
    <string name="pref_key_reader_bg" translatable="false">reader_bg</string>
    <string name="pref_key_name" translatable="false">com.marxist.android.PREFERENCE</string>
    <string name="default_notification_channel_id" translatable="false">marxist_tamil</string>
    <string name="marxist_instant_news" translatable="false">marxist_instant_news</string>

    <string name="app_name">Marxist Reader</string>
    <string name="action_settings">Settings</string>
    <string name="select_your_language_hint_1">Select your feed language(s)</string>
    <string name="select_your_language_hint_2">You can select multiple language</string>

    <string name="must_select_language">Must select at least one language</string>
    <string name="instant_news">Instant News</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="dark_theme">Night Mode</string>
    <string name="feed_languages">Feed Languages</string>
    <string name="update">Update</string>
    <string name="loading">Loading&#8230;</string>
    <string name="connected_to_internet">Connected to Internet</string>
    <string name="no_internet">Connection Lost</string>
    <string name="books">E-Books</string>
    <string name="bookmarks">Highlights</string>
    <string name="bookmark">Highlight</string>
    <string name="saved">Saved</string>
    <string name="settings">Settings</string>

    <string-array name="splash_loading">
        <item>Loading Articles&#8230;</item>
        <item>Please wait&#8230;</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="notifications_header">Notifications</string>
    <string name="all_notification">All Notifications</string>
    <string name="stop_all_notifications">Stop all notifications</string>
    <string name="receive_all_notifications">Receive all notifications</string>

    <string name="theme_header">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_disabled">Disabled</string>
    <string name="dark_mode_enable">Enabled</string>
    <string name="audio_available">Audio Available</string>
    <string name="back">Back</string>
    <string name="download">Download</string>
    <string name="forward">Forward</string>
    <string name="play_pause">Play/Pause</string>
    <string name="rewind">Rewind</string>
    <string name="stop">Stop</string>
    <string name="font_size">Font Size</string>
    <string name="share_text">Share</string>
    <string name="copy_text">Copy</string>
    <string name="text_copied">Text Copied</string>
    <string name="to_read_more">Read more :&#160;</string>
    <string name="remove_highlight">Remove</string>
    <string name="_8942">⋮</string>
    <string name="estimate">&#160;~</string>
    <string name="copied">Copied…</string>
    <string name="added_to_bookmarks">Added to highlights</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="_00_00">00:00</string>
    <string name="no_highlights_to_show">No highlights to show</string>
    <string name="no_notifications_to_show">Nothing to Show</string>
    <string name="you_can_add_highlights_from_any_article">You can add highlights from any article</string>
    <string name="you_can_add_download_from_any_article">You can download audio from any article</string>
    <string name="download_msg_rationale">Need storage permission to perform read, write.</string>
    <string name="download_started">Downloading…</string>
    <string name="no_downloads">No Downloads</string>
    <string name="audio_deleted">Audio deleted</string>
    <string name="about_us">About Us</string>
    <string name="open_source_licence">Open source licence</string>
    <string name="lottie_files_credit">LottieFiles Credit</string>
    <string name="credits">Credits</string>
    <string name="this_animation_is_available_to_download_and_use_for_free_under_creative_commons_license_2_0">This animation is available to download and use for Free under Creative Commons License 2.0</string>
    <string name="https_lottiefiles_com_10223_notifications">https://lottiefiles.com/781-no-notifications</string>
    <string name="https_lottiefiles_com_772_bookmark_animation">https://lottiefiles.com/772-bookmark-animation</string>
    <string name="https_lottiefiles_com_marketplace_multimedia_icons">https://lottiefiles.com/marketplace/multimedia-icons</string>
    <string name="https_lottiefiles_com_11123_music">https://lottiefiles.com/11123-music</string>
    <string name="https_lottiefiles_com_353_newspaper_spinner">https://lottiefiles.com/353-newspaper-spinner</string>
    <string name="https_lottiefiles_com_353_stay_home">https://lottiefiles.com/18289-stay-home-stay-safe-red</string>
    <string name="lottie_credits">Lottie Credits</string>
    <string name="default_notification_channel_id_test">marxist_tamil_test</string>
    <string name="quotes">Quotes</string>
    <string name="about_text"><![CDATA[
<p><b>Marxist Reader</b> செயலியானது, மார்க்சிஸ்ட் மாத இதழின் இணைய பதிப்பு, ஒலிப் பதிவுகள் மற்றும் மின் நூல் வடிவத்தை உள்ளடக்கிய ஒன்றாகும். மார்க்சிய தத்துவ மாத இதழாக 1989, ஜூன் மாதத்தில் இருந்து வெளியாகிறது \'மார்க்சிஸ்ட்\'. இப்போது நவீன வடிவங்களிலும் வாசகர்களை வந்தடைகிறது.</p>

<p><b>அலைபேசி:</b> 9994776471</p>

<p>மாவட்டங்களில் செயல்படும் வாசகர் வட்டங்களில் இணைந்துகொள்ள எங்களை தொடர்புகொள்ளுங்கள்.</p>

<p>இந்த செயலி மார்க்சிஸ்ட் கட்சியின் மல்ட்டிமீடியா கிளையின் மூலம்  பராமரிக்கப்படுகிறது. தொழில்நுட்ப உதவிக்கு tamilmarxist@gmail.com என்ற மின்னஞ்சலில் தொடர்புகொள்ளலாம்.</p>

<p><b>நன்றி:</b><br><a href="http://www.kaniyam.com/">கணியம் அறக்கட்டளை</a> (மின் நூல் உருவாக்கம்)<br>http://www.kaniyam.com/</p>

        ]]></string>
    <string name="feed_back">Feedback</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="comments">Your comment</string>
    <string name="submit">Submit</string>
    <string name="try_later">Try again later…</string>
    <string name="please_wait">Please wait</string>
    <string name="thanks_feedback">Thanks for your feedback…</string>
    <string name="phone">Phone</string>
    <string name="download_completed">Download Completed</string>
    <string name="download_failed">Download Failed</string>
    <string name="text_size">Text Size</string>
    <string name="tune">Tune</string>
    <string name="tune_reader">Tune Reader</string>
    <string name="pref_key_preferred_font">preferred_font</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="share">Share</string>
    <string name="facebook_sahre">Facebook Share</string>
    <string name="share_to">Share with…</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of service</string>
    <string name="version">Version</string>
    <string name="facebook_app_id">1036120473784543</string>
    <string name="facebook_client_token">66dd33360b46c2d8636574de166c23ad</string>
</resources>
