<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:persistent="true">

    <PreferenceCategory
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            app:title="@string/theme_header">

        <SeekBarPreference
                android:max="20"
                app:adjustable="true"
                app:defaultValue="14"
                app:iconSpaceReserved="false"
                app:key="@string/pref_key_font_size"
                app:min="12"
                app:seekBarIncrement="1"
                app:showSeekBarValue="true"
                app:title="@string/font_size" />
    </PreferenceCategory>

    <PreferenceCategory
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            app:title="@string/notifications_header">

        <SwitchPreferenceCompat
                app:defaultValue="true"
                app:iconSpaceReserved="false"
                app:key="all_notification"
                app:summaryOff="@string/stop_all_notifications"
                app:summaryOn="@string/receive_all_notifications"
                app:title="@string/all_notification" />
    </PreferenceCategory>

    <PreferenceCategory
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"
            app:title="@string/credits">

        <Preference
                app:allowDividerBelow="true"
                app:iconSpaceReserved="false"
                app:key="@string/lottie_files_credit"
                app:title="@string/lottie_files_credit" />

        <Preference
                app:allowDividerBelow="true"
                app:iconSpaceReserved="false"
                app:key="@string/feed_back"
                app:title="@string/feed_back" />

        <Preference
                app:allowDividerBelow="true"
                app:iconSpaceReserved="false"
                app:key="@string/about_us"
                app:title="@string/about_us" />

        <Preference
                app:allowDividerBelow="true"
                app:iconSpaceReserved="false"
                app:key="@string/terms_of_use"
                app:title="@string/terms_of_use" />

        <Preference
                app:allowDividerBelow="true"
                app:iconSpaceReserved="false"
                app:key="@string/privacy_policy"
                app:title="@string/privacy_policy" />
    </PreferenceCategory>

    <!--    <PreferenceCategory-->
    <!--            app:allowDividerAbove="true"-->
    <!--            app:iconSpaceReserved="false"-->
    <!--            app:title="Contribute">-->

    <!--        <Preference-->
    <!--                app:allowDividerBelow="true"-->
    <!--                app:iconSpaceReserved="false"-->
    <!--                app:key="support_by_video"-->
    <!--                app:summary="Support us by watching videos"-->
    <!--                app:title="Support us" />-->
    <!--    </PreferenceCategory>-->
</PreferenceScreen>
