<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_feeds">

    <fragment
            android:id="@+id/navigation_feeds"
            android:name="com.marxist.android.ui.fragments.feeds.FeedsFragment"
            android:label="@string/feeds"
            tools:layout="@layout/fragment_feeds" />

    <fragment
            android:id="@+id/navigation_ebook"
            android:name="com.marxist.android.ui.fragments.books.EBooksFragment"
            android:label="@string/books"
            tools:layout="@layout/fragment_ebook" />

    <fragment
            android:id="@+id/navigation_saved"
            android:name="com.marxist.android.ui.fragments.saved.SavedFragment"
            android:label="@string/saved"
            tools:layout="@layout/fragment_saved" />

    <fragment
            android:id="@+id/navigation_bookmarks"
            android:name="com.marxist.android.ui.fragments.bookmark.BookmarkFragment"
            android:label="@string/bookmarks"
            tools:layout="@layout/fragment_bookmarks" />

    <fragment
            android:id="@+id/navigation_settings"
            android:name="com.marxist.android.ui.fragments.settings.SettingsFragment"
            android:label="@string/settings" />
</navigation>